--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					<div class="col-lg-8 pt-4 pt-lg-0 content">
 						<h3>WordPress &amp; WooCommerce Expert</h3>
 						<p class="fst-italic">
-							Highly skilled WordPress Developer with expertise in advanced development techniques, custom theme/plugin integration, and project management. Proven track record of utilizing strong communication and collaboration skills to build trusted, long-term client relationships and deliver high-performance, user-centric web solutions that exceed expectations.
+							Highly skilled WordPress Developer with expertise in advanced development techniques, custom theme/plugin integration, and project management.
 						</p>
 						<div class="row profile-details">
 							<div class="col-lg-6">
@@ -464,6 +464,7 @@
 	<script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
