--- a/index.html
+++ b/index.html
@@ -249,13 +249,92 @@
 								</div>
 							</a>
 						</div>
-					</div>					
+					</div>
+					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
+						<div class="portfolio-wrap">
+							<a href="https://www.armcodirect.co.uk" title="Armco Direct" target="_blank">
+								<img src="assets/img/portfolio/armcodirect.png" class="img-fluid" alt="Armco Direct">
+								<div class="portfolio-info">
+									<h4>Armco Direct</h4>
+									<div class="portfolio-links">
+										<i class="bx bx-link"></i>
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
 							<a href="https://www.cistec.ch" title="Cistec" target="_blank">
 								<img src="assets/img/portfolio/cistec.png" class="img-fluid" alt="Cistec">
 								<div class="portfolio-info">
 									<h4>Cistec</h4>
+									<div class="portfolio-links">
+										<i class="bx bx-link"></i>
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
+						<div class="portfolio-wrap">
+							<a href="https://torello.com" title="Torello" target="_blank">
+								<img src="assets/img/portfolio/torello.png" class="img-fluid" alt="Torello">
+								<div class="portfolio-info">
+									<h4>Torello</h4>
+									<div class="portfolio-links">
+										<i class="bx bx-link"></i>
+									</div>
+								</div>
+							</a>
+						</div>
+						</a>
+					</div>
+					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
+						<div class="portfolio-wrap">
+							<a href="https://www.smithbrosltd.co.uk/" title="Smith Bros Services Ltd" target="_blank">
+								<img src="assets/img/portfolio/smithbrosltd.png" class="img-fluid" alt="Smith Bros Services Ltd">
+								<div class="portfolio-info">
+									<h4>Smith Bros Services Ltd</h4>
+									<div class="portfolio-links">
+										<i class="bx bx-link"></i>
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
+						<div class="portfolio-wrap">
+							<a href="https://www.businessenergyclaimline.com" title="Business Energy" target="_blank">
+								<img src="assets/img/portfolio/businessenergyclaim.png" class="img-fluid" alt="Business Energy">
+								<div class="portfolio-info">
+									<h4>Business Energy</h4>
+									<div class="portfolio-links">
+										<i class="bx bx-link"></i>
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
+						<div class="portfolio-wrap">
+							<a href="https://www.borobathrooms.co.uk" title="Boro" target="_blank">
+								<img src="assets/img/portfolio/boro.png" class="img-fluid" alt="Boro">
+								<div class="portfolio-info">
+									<h4>Boro</h4>
+									<div class="portfolio-links">
+										<i class="bx bx-link"></i>
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
+						<div class="portfolio-wrap">
+							<a href="https://www.tiroler-baumstelle.at" title="Tiroler" target="_blank">
+								<img src="assets/img/portfolio/tiroler.png" class="img-fluid" alt="Tiroler">
+								<div class="portfolio-info">
+									<h4>Tiroler</h4>
 									<div class="portfolio-links">
 										<i class="bx bx-link"></i>
 									</div>
@@ -301,7 +380,6 @@
 								</div>
 							</a>
 						</div>
-						</a>
 					</div>
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
@@ -328,60 +406,7 @@
 								</div>
 							</a>
 						</div>
-					</div>
-					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
-						<div class="portfolio-wrap">
-							<a href="https://torello.com" title="Torello" target="_blank">
-								<img src="assets/img/portfolio/torello.png" class="img-fluid" alt="Torello">
-								<div class="portfolio-info">
-									<h4>Torello</h4>
-									<div class="portfolio-links">
-										<i class="bx bx-link"></i>
-									</div>
-								</div>
-							</a>
-						</div>
-						</a>
-					</div>
-					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
-						<div class="portfolio-wrap">
-							<a href="https://www.smithbrosltd.co.uk/" title="Smith Bros Services Ltd" target="_blank">
-								<img src="assets/img/portfolio/smithbrosltd.png" class="img-fluid" alt="Smith Bros Services Ltd">
-								<div class="portfolio-info">
-									<h4>Smith Bros Services Ltd</h4>
-									<div class="portfolio-links">
-										<i class="bx bx-link"></i>
-									</div>
-								</div>
-							</a>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
-						<div class="portfolio-wrap">
-							<a href="https://www.armcodirect.co.uk" title="Armco Direct" target="_blank">
-								<img src="assets/img/portfolio/armcodirect.png" class="img-fluid" alt="Armco Direct">
-								<div class="portfolio-info">
-									<h4>Armco Direct</h4>
-									<div class="portfolio-links">
-										<i class="bx bx-link"></i>
-									</div>
-								</div>
-							</a>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
-						<div class="portfolio-wrap">
-							<a href="https://www.tiroler-baumstelle.at" title="Tiroler" target="_blank">
-								<img src="assets/img/portfolio/tiroler.png" class="img-fluid" alt="Tiroler">
-								<div class="portfolio-info">
-									<h4>Tiroler</h4>
-									<div class="portfolio-links">
-										<i class="bx bx-link"></i>
-									</div>
-								</div>
-							</a>
-						</div>
-					</div>
+					</div>					
 				</div>
 			</div>
 		</section><!-- End Portfolio Section -->
@@ -451,6 +476,7 @@
 	<script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
